<resources>
    <string name="app_name">IMKB</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="veri_park_imkb">Veri Park IMKB</string>
    <string name="symbol">Symbol</string>
    <string name="price">Price</string>
    <string name="diff">Diff</string>
    <string name="volume">Volume</string>
    <string name="bid">Bid</string>
    <string name="offer">Offer</string>
    <string name="change">Change</string>
    <string name="search">Search</string>
    <string name="up_arrow">▲</string>
    <string name="no_chart_data_available">No chart data available</string>
    <string name="all">All</string>
    <string name="increasing">Increasing</string>
    <string name="decreasing">Decreasing</string>
    <string name="volume_30">Volume 30</string>
    <string name="volume_50">Volume 50</string>
    <string name="volume_100">Volume 100</string>

</resources>