<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.favorite.FavoriteFragment">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/light_gray"
            android:orientation="horizontal"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/symbol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                android:text="@string/symbol"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/difference"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/diff"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/volume"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/volume"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/bid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bid"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/offer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/offer"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/change"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:gravity="center"
                android:paddingEnd="5dp"
                android:text="@string/change"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/gray_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="0dp"
            tools:listitem="@layout/stock_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>